tests/fixtures/invalid/none_bitor_bool.py
# Cannot bitwise OR None and Bool
x: None = None | True
